--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"description": "Yaloub PHP SDK helps with the connection to Yaloub RestFul API.",
 	"keywords": ["sdk", "php", "yaloub"],
 	"homepage": "http://github.com/Yaloub/yaloub-php-sdk",
-	"license": "GPLv2",
+	"license": "Apache 2 License",
 	"authors": [
 		{
 			"name": "Jean-Nicolas Boulay",
